# metalib

./: .bumpversion.cfg  .gitignore  README.md  dump.yaml  environment.yml  pyproject.toml  test.py
.github/workflows/: python-package-conda.yml  python-package-with-poetry.yml
metalib/: __init__.py  _nodes.py  _yaml.py  core.py
tests/: test_access.py  test_create_metadata.py  test_dump_metadata.py  test_metalib.py  test_transform_value.py
tests/core/: test_mutable_mapping_node.py  test_mutable_sequence_node.py  test_scalar_node.py  test_transform_value.py
tests/data/: test.yaml
