[tool.poetry]
name = "metalib"
version = "0.3.1"
description = ""
authors = ["thaeber"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.0.0"
toolz = ">=0.11.1"
"ruamel.yaml" = ">=0.16.12"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
yapf = ">=0.30.0"
pylint = ">=2.6.0"
bump2version = ">=1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
